--- a/gh-react-msla/package.json
+++ b/gh-react-msla/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage":"https://joaomarcobarros.github.io/testeghpages",
+    "homepage": "https://joaomarcobarros.github.io/testeghpages",
     "name": "gh-react-msla",
     "version": "0.1.0",
     "private": true,
@@ -33,5 +33,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^3.1.0"
     }
 }
